Project

General

Profile

Actions

Bug #11427

closed

Fix documentation for String#slice

Bug #11427: Fix documentation for String#slice

Added by liptonshmidt (Alexey Lipnyagov) about 10 years ago. Updated about 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:70298]

Description

In the String#slice description [slice(start, length) → new_str or nil]
the word 'index' was displayed in +code+ font but the argument in the signature is called 'start'.

(screenshot attached)


Files

0001-string.c-fixed-slice-description.patch (961 Bytes) 0001-string.c-fixed-slice-description.patch liptonshmidt (Alexey Lipnyagov), 08/10/2015 09:40 AM
string#slice.png (169 KB) string#slice.png liptonshmidt (Alexey Lipnyagov), 08/10/2015 09:41 AM

Updated by hsbt (Hiroshi SHIBATA) about 10 years ago Actions #1

  • Status changed from Open to Closed

Applied in changeset r51530.


Actions

Also available in: PDF Atom