string.c
@@ -3788,7 +3788,7 @@ rb_str_aref(VALUE str, VALUE indx)
  *  Element Reference --- If passed a single +index+, returns a substring of
  *  one character at that index. If passed a +start+ index and a +length+,
  *  returns a substring containing +length+ characters starting at the
- *  +index+. If passed a +range+, its beginning and end are interpreted as
+ *  +start+ index. If passed a +range+, its beginning and end are interpreted as
  *  offsets delimiting the substring to be returned.
  *
  *  In these three cases, if an index is negative, it is counted from the end
